--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./My Sprunki.exe"
+export_path="../../ExportedGames/my-sprunki/my-sprunki_windows_v1.3/My Sprunki.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -20,7 +20,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=0
+debug/export_console_wrapper=2
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../ExportedGames/my-sprunki/my-sprunki_html_v1.2/My Sprunki.html"
+export_path="../../ExportedGames/my-sprunki/my-sprunki_html_v1.3/My Sprunki.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
